misc(build.gradle): remove red text when starting tests