@@ -57,5 +57,6 @@ dependencies {
 }
 
 test {
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
     useJUnitPlatform()
 }
